--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
+    <script src="bower_components/what-input/what-input.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
